Fix spacing issues

--- a/rwithoutstatistics/public/css/tailwind.css
+++ b/rwithoutstatistics/public/css/tailwind.css
@@ -702,48 +702,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .absolute{
   position: absolute;
 }
-.sticky{
-  position: -webkit-sticky;
-  position: sticky;
-}
-.top-0{
-  top: 0px;
-}
-.right-0{
-  right: 0px;
-}
-.top-2{
-  top: 0.5rem;
+.top-8{
+  top: 2rem;
 }
 .right-8{
   right: 2rem;
 }
-.top-8{
-  top: 2rem;
-}
-.right-2{
-  right: 0.5rem;
-}
-.top-16{
-  top: 4rem;
-}
-.right-16{
-  right: 4rem;
-}
-.top-32{
-  top: 8rem;
-}
-.top-24{
-  top: 6rem;
-}
-.top-\[28\]{
-  top: 28;
-}
 .top-28{
   top: 7rem;
-}
-.m-8{
-  margin: 2rem;
 }
 .mx-8{
   margin-left: 2rem;
@@ -753,8 +719,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: auto;
   margin-right: auto;
 }
-.mt-16{
-  margin-top: 4rem;
+.mt-64{
+  margin-top: 16rem;
 }
 .mt-8{
   margin-top: 2rem;
@@ -762,23 +728,20 @@ Ensure the default browser behavior of the `hidden` attribute.
 .mb-4{
   margin-bottom: 1rem;
 }
-.mt-0{
-  margin-top: 0px;
+.mt-48{
+  margin-top: 12rem;
 }
-.mb-64{
-  margin-bottom: 16rem;
-}
-.mt-32{
-  margin-top: 8rem;
+.mt-52{
+  margin-top: 13rem;
 }
 .inline{
   display: inline;
 }
-.h-screen{
-  height: 100vh;
-}
 .h-6{
   height: 1.5rem;
+}
+.h-screen{
+  height: 100vh;
 }
 .w-6{
   width: 1.5rem;
@@ -786,43 +749,8 @@ Ensure the default browser behavior of the `hidden` attribute.
 .max-w-prose{
   max-width: 65ch;
 }
-.rotate-1{
-  --tw-rotate: 1deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.-rotate-1{
-  --tw-rotate: -1deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.skew-y-3{
-  --tw-skew-y: 3deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.rounded-sm{
-  border-radius: 0.125rem;
-}
 .rounded-lg{
   border-radius: 0.5rem;
-}
-.bg-white{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-.bg-gray-700{
-  --tw-bg-opacity: 1;
-  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-}
-.bg-yellow-800{
-  --tw-bg-opacity: 1;
-  background-color: rgb(133 77 14 / var(--tw-bg-opacity));
-}
-.bg-yellow-700{
-  --tw-bg-opacity: 1;
-  background-color: rgb(161 98 7 / var(--tw-bg-opacity));
-}
-.bg-yellow-400{
-  --tw-bg-opacity: 1;
-  background-color: rgb(250 204 21 / var(--tw-bg-opacity));
 }
 .bg-\[\#F8CE5D\]{
   --tw-bg-opacity: 1;
@@ -832,8 +760,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(108 171 221 / var(--tw-bg-opacity));
 }
-.p-6{
-  padding: 1.5rem;
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 .p-4{
   padding: 1rem;
@@ -851,14 +780,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .font-sans{
   font-family: IBM Plex Sans, sans-serif;
 }
+.text-sm{
+  font-size: .875rem;
+}
 .text-5xl{
   font-size: 3rem;
 }
 .text-lg{
   font-size: 1.125rem;
-}
-.text-sm{
-  font-size: .875rem;
 }
 .font-bold{
   font-weight: 700;
@@ -869,6 +798,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .leading-normal{
   line-height: 1.5;
 }
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
 .text-black{
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
@@ -876,15 +809,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-gray-800{
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity));
-}
-.text-white{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-.shadow-md{
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .shadow-lg{
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
@@ -895,5 +819,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   .sm\:mx-0{
     margin-left: 0px;
     margin-right: 0px;
+  }
+  .sm\:mt-16{
+    margin-top: 4rem;
   }
 }
